nudged infoDiv in order to avoid border overlap

--- a/styles/main.css
+++ b/styles/main.css
@@ -386,7 +386,7 @@ img {
   width: 882px;
   height: 350px;
   background: black;
-  margin-left: 2px;
+  margin-left: 3px;
   top: 386px;
   z-index: 1001;
 }
